--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gaming-vibes",
+  "name": "animal-politik-siteZ",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "netlify-identity-widget": "^1.9.1",
     "next": "10.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
