--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "netlify-identity-widget": "^1.9.1",
     "next": "10.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.32.12"
   }
 }
