--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "10.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.32.12"
+    "sass": "^1.32.12",
+    "underscore": ">=1.12.1"
   }
 }
