--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^4.1.17",
     "netlify-identity-widget": "^1.9.1",
     "next": "^10.2.2",
     "react": "17.0.2",
