--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-audio-player": "^0.17.0",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "sass": "^1.32.12"
   }
 }
