--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "netlify-identity-widget": "^1.9.1",
     "next": "^10.2.2",
     "react": "17.0.2",
-    "react-audio-player": "^0.17.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "sass": "^1.32.12"
+  },
+  "devDependencies": {
+    "amplitudejs": "^5.3.1"
   }
 }
