chore: Improve music player styles/logic, buttons

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "sass": "^1.32.12"
+  },
+  "devDependencies": {
+    "classnames": "^2.2.6"
   }
 }
